--- a/app/src/main/res/layout/widget_dynamic_unknown.xml
+++ b/app/src/main/res/layout/widget_dynamic_unknown.xml
@@ -18,10 +18,11 @@
             android:src="@drawable/icon_warning" />
 
         <TextView
+            android:id="@+id/dynamic_unknown_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:text="暂不支持该类型动态..."
+            android:text="@string/dynamic_unknown_tips"
             android:textSize="13sp" />
     </LinearLayout>
 
