基本的主题更换支持

--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -7,7 +7,7 @@
         android:id="@+id/favv_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mainColor"
+        android:background="?attr/colorPrimary"
         android:gravity="center_vertical"
         android:paddingBottom="4dp"
         android:paddingTop="10dp">
