--- a/app/src/main/res/layout/activity_article.xml
+++ b/app/src/main/res/layout/activity_article.xml
@@ -7,7 +7,7 @@
         android:id="@+id/art_title_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/mainColor"
+        android:background="?attr/colorPrimary"
         android:gravity="center_vertical"
         android:paddingTop="10dp"
         android:paddingBottom="4dp">
