--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:id="@+id/main_title"
         android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:background="@color/mainColor"
+        android:background="?attr/colorPrimary"
         android:gravity="center_vertical"
         android:onClick="buttonTitle"
         android:paddingBottom="4dp"
