--- a/app/src/main/res/layout/activity_sue.xml
+++ b/app/src/main/res/layout/activity_sue.xml
@@ -8,7 +8,7 @@
         android:id="@+id/dt_title_layout"
         android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:background="@color/mainColor"
+        android:background="?attr/colorPrimary"
         android:gravity="center_vertical"
         android:paddingBottom="4dp"
         android:paddingTop="10dp">
