--- a/app/src/main/res/layout/activity_supportme.xml
+++ b/app/src/main/res/layout/activity_supportme.xml
@@ -16,7 +16,7 @@
             android:id="@+id/sme_title_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/mainColor"
+            android:background="?attr/colorPrimary"
             android:gravity="center_vertical"
             android:paddingBottom="4dp"
             android:paddingTop="10dp">
