--- a/app/src/main/res/layout/activity_text.xml
+++ b/app/src/main/res/layout/activity_text.xml
@@ -12,7 +12,7 @@
             android:id="@+id/text_title_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/mainColor"
+            android:background="?attr/colorPrimary"
             android:gravity="center_vertical"
             android:paddingBottom="4dp"
             android:paddingTop="10dp">
