--- a/app/src/main/res/layout/widget_title.xml
+++ b/app/src/main/res/layout/widget_title.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="26dp"
-    android:background="@color/mainColor"
+    android:background="?attr/colorPrimary"
     android:gravity="center_vertical">
 
     <TextView
