--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,13 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="mainColor">#fa7298</color>
+    <color name="mainColorBlue">#91DAFF</color>
+    <color name="colorPrimaryDarkNormal">#212121</color>
+    <color name="colorPrimaryDarkDark">#000000</color>
+    <color name="colorForeDark">#FFFFFFFF</color>
+
+    <color name="primaryBlue">#66ccff</color>
+    <color name="bgDark">#303030</color>
 
     <color name="white">#ffffff</color>
     <color name="gray_ee">#EEEEEE</color>
