--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,36 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/pink_light</item>
+        <item name="colorAccent">@color/pink_light</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/mainColor</item>
+        <item name="colorPrimary">@color/mainColor</item>
+        <item name="android:windowBackground">@color/activityBG</item>
+        <item name="android:textColor">?android:attr/colorForeground</item>
+        <item name="android:colorForeground">@color/gray_77</item>
+        <item name="colorTitle">@color/gray_44</item>
+        <item name="colorDynamicShareBack">@color/gray_ee</item>
+    </style>
+
+    <style name="BlueTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/primaryBlue</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/mainColorBlue</item>
         <item name="android:windowBackground">@color/activityBG</item>
     </style>
 
-    <style name="BlueTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/pink_light</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    <style name="DarkTheme" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="colorPrimary">@color/colorPrimaryDarkNormal</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkDark</item>
         <item name="colorAccent">@color/mainColor</item>
-        <item name="android:windowBackground">@color/activityBG</item>
+        <item name="android:windowBackground">@color/bgDark</item>
+        <item name="android:colorBackground">@color/bgDark</item>
+        <item name="android:colorForeground">@color/colorForeDark</item>
+        <item name="colorTitle">@color/gray_aa</item>
+        <item name="colorDynamicShareBack">@color/gray_44</item>
     </style>
 
 </resources>
