--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,14 +2,15 @@
 <resources>
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryGreen">#39C5BB</color>
+    <color name="colorPrimaryBlue">#66ccff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="mainColor">#fa7298</color>
     <color name="mainColorBlue">#91DAFF</color>
+    <color name="mainColorGreen">#71BDB8</color>
     <color name="colorPrimaryDarkNormal">#212121</color>
     <color name="colorPrimaryDarkDark">#000000</color>
     <color name="colorForeDark">#FFFFFFFF</color>
-
-    <color name="primaryBlue">#66ccff</color>
     <color name="bgDark">#303030</color>
 
     <color name="white">#ffffff</color>
