主题设置界面添加了动画

--- a/app/src/main/res/values/atters.xml
+++ b/app/src/main/res/values/atters.xml
@@ -22,4 +22,5 @@
 
     <attr format="color" name="colorTitle"/>
     <attr format="color" name="colorDynamicShareBack"/>
+    <attr format="color" name="colorMenuIconBack"/>
 </resources>
