--- a/app/src/main/res/drawable/ic_check_12.xml
+++ b/app/src/main/res/drawable/ic_check_12.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24"
     android:tint="?android:attr/colorForeground">
   <path
-      android:fillColor="@android:color/white"
+      android:fillColor="?android:attr/textColor"
       android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z"/>
 </vector>
