--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="mainColor">#fa7298</color>
     <color name="mainColorBlue">#91DAFF</color>
-    <color name="mainColorGreen">#71BDB8</color>
+    <color name="mainColorGreen">#9AF4EE</color>
     <color name="colorPrimaryDarkNormal">#212121</color>
     <color name="colorPrimaryDarkDark">#000000</color>
     <color name="colorForeDark">#FFFFFFFF</color>
