--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
         <item name="android:colorForeground">@color/gray_77</item>
         <item name="colorTitle">@color/gray_44</item>
         <item name="colorDynamicShareBack">@color/gray_ee</item>
+        <item name="colorMenuIconBack">@color/pink_light</item>
     </style>
 
     <style name="BlueTheme" parent="AppTheme">
@@ -18,6 +19,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/mainColorBlue</item>
         <item name="android:windowBackground">@color/activityBG</item>
+        <item name="colorMenuIconBack">?attr/colorAccent</item>
     </style>
 
     <style name="GreenTheme" parent="AppTheme">
@@ -26,6 +28,7 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/mainColorGreen</item>
         <item name="android:windowBackground">@color/activityBG</item>
+        <item name="colorMenuIconBack">?attr/colorAccent</item>
     </style>
 
     <style name="DarkTheme" parent="AppTheme">
@@ -39,6 +42,7 @@
         <item name="android:colorForeground">@color/colorForeDark</item>
         <item name="colorTitle">@color/gray_aa</item>
         <item name="colorDynamicShareBack">@color/gray_44</item>
+        <item name="colorMenuIconBack">?attr/colorPrimaryDark</item>
     </style>
 
 </resources>
