--- a/app/src/main/res/layout/activity_bangumi.xml
+++ b/app/src/main/res/layout/activity_bangumi.xml
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/bgm_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -96,7 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/bgm_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -121,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/bgm_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
