--- a/app/src/main/res/drawable/layer_bg_reply_show.xml
+++ b/app/src/main/res/drawable/layer_bg_reply_show.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/gray_ee" />
+            <solid android:color="?attr/colorLayerBack" />
         </shape>
     </item>
     <item android:drawable="?attr/selectableItemBackground" />
