--- a/app/src/main/res/layout/activity_dynamic_detail.xml
+++ b/app/src/main/res/layout/activity_dynamic_detail.xml
@@ -61,7 +61,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/dynamic_detail_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -86,7 +86,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/dynamic_detail_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -112,7 +112,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/dynamic_detail_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
