布局xml对主题的支持改进

--- a/app/src/main/res/layout/activity_favorvideo.xml
+++ b/app/src/main/res/layout/activity_favorvideo.xml
@@ -35,7 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/favv_title_layout"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
@@ -60,7 +60,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/favv_title_layout"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
