--- a/app/src/main/res/layout/fragment_user_list_people.xml
+++ b/app/src/main/res/layout/fragment_user_list_people.xml
@@ -7,7 +7,7 @@
         android:id="@+id/user_list_people_nothing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
@@ -32,7 +32,7 @@
         android:id="@+id/user_list_people_no_web"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:focusable="true"
         android:gravity="center"
