--- a/app/src/main/res/layout/activity_logsoff.xml
+++ b/app/src/main/res/layout/activity_logsoff.xml
@@ -71,7 +71,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/logs_title_layout"
         android:layout_centerInParent="true"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
