--- a/app/src/main/res/layout/activity_sue.xml
+++ b/app/src/main/res/layout/activity_sue.xml
@@ -59,11 +59,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:background="@color/gray_da"
-                android:paddingBottom="10dp"
+                android:background="?attr/colorLayerBack"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp"
                 android:paddingTop="10dp"
+                android:paddingRight="20dp"
+                android:paddingBottom="10dp"
                 android:textSize="13sp" />
 
             <Button
@@ -96,7 +96,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/dt_title_layout"
         android:layout_centerInParent="true"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center_horizontal"
         android:orientation="vertical"
