--- a/app/src/main/res/layout/fragment_bangumi_recommend.xml
+++ b/app/src/main/res/layout/fragment_bangumi_recommend.xml
@@ -15,7 +15,7 @@
         android:id="@+id/bgm_recommend_nothing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
