--- a/app/src/main/res/layout/fragment_favor.xml
+++ b/app/src/main/res/layout/fragment_favor.xml
@@ -55,7 +55,7 @@
         android:id="@+id/fav_nonthing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activityBG"
+        android:background="?android:attr/colorBackground"
         android:clickable="true"
         android:gravity="center"
         android:orientation="vertical"
