--- a/app/src/main/res/layout/fragment_reply.xml
+++ b/app/src/main/res/layout/fragment_reply.xml
@@ -20,7 +20,7 @@
         android:id="@+id/reply_nothing"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -44,7 +44,7 @@
         android:id="@+id/reply_noweb"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp"
@@ -68,7 +68,7 @@
         android:id="@+id/reply_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="?android:attr/colorBackground"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="33dp">
