部分图标矢量化

--- a/app/src/main/res/drawable/shape_menuiconbg.xml
+++ b/app/src/main/res/drawable/shape_menuiconbg.xml
@@ -3,6 +3,6 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/pink_light"/>
+        android:color="?attr/colorAccent"/>
 
 </shape>
